# SynapseSnip

./: .gitignore  .impeccable.md  README.md  RELEASE.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
agents/: agents.md
scripts/: tauri-build.ps1
ssnip-core/: Cargo.toml  build.rs  tauri.conf.json
ssnip-core/binaries/: README.txt
ssnip-core/capabilities/: default.json
ssnip-core/icons/: icon.icns
ssnip-core/src/: capture.rs  clipboard.rs  hotkeys.rs  lib.rs  main.rs  recorder.rs  settings.rs
ssnip-docs/: .impeccable.md
ssnip-ui/: App.tsx  index.css  main.tsx
ssnip-ui/components/: AnnotationCanvas.tsx  DelayTimer.tsx  GridBackground.tsx  HotkeyRecorder.tsx  Select.tsx  SettingsPanel.tsx  SynapseLogo.tsx  ThemeDropdown.tsx  TitleBar.tsx  Toast.tsx  Toolbar.tsx  UpdateModal.tsx
ssnip-ui/components/capture/: CaptureModeBar.tsx  CountdownOverlay.tsx  RecordingHud.tsx  RecordingOptionsDropdown.tsx
ssnip-ui/components/editor/: ColorPicker.tsx  EditorActionDock.tsx
ssnip-ui/hooks/: useAnnotation.ts  useCapture.ts  useEditorController.ts  useHotkeys.ts
ssnip-ui/routes/: EditorPage.tsx  FloatingImagePage.tsx  NotificationPage.tsx  OverlayPage.tsx  VideoNotificationPage.tsx
ssnip-ui/store/: appStore.ts
ssnip-ui/types/: index.ts
ssnip-ui/utils/: defaultSettings.ts  filename.ts  theme.ts
ssnip-ui/utils/__tests__/: filename.test.ts
