[package]
name = "synapsesnip"
version = "0.1.3"
description = "Windows Snipping Tool clone"
authors = ["you"]
edition = "2021"

[lib]
name = "synapsesnip_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2.2"
tauri-plugin-clipboard-manager = "2.2"
tauri-plugin-dialog = "2.2"
tauri-plugin-fs = "2.2"
tauri-plugin-notification = "2.2"
tauri-plugin-drag = "2.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
screenshots = "0.8"
arboard = "3.4"
image = { version = "0.25", features = ["png", "jpeg", "bmp"] }
base64 = "0.22"
thiserror = "1"
once_cell = "1"
dirs = "5"
chrono = "0.4"
urlencoding = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

